# paradigm-uncertainty-nlp-claude

./: README.md  REPORT.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml
logs/: research_prompt.txt  session_instructions.txt
notebooks/: 2025-11-16-22-37_ParadigmUncertaintyExperiment.ipynb
results/: results_summary.json
