[project]
name = "paradigm-uncertainty-research"
version = "0.1.0"
description = "Research on paradigm-level uncertainty in language models"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
